--- a/momentum/index.html
+++ b/momentum/index.html
@@ -17,8 +17,19 @@
             <button class="play-prev player-icon"></button>
             <button class="play player-icon"></button>
             <button class="play-next player-icon"></button>
+
           </div>
           <div class="progress-bar-container">
+            <div class="progress-bar"></div>
+          </div>
+          <div class="sound-control">
+            <div class="audio-bar-container">
+                <div class="audio-bar"></div>
+            </div>
+            <img src="assets/img/NoSound.svg" class="NoSound" alt="no sound">
+            <img src="assets/img/LowSound.svg" class="LowSound" alt="low sound">
+            <img src="assets/img/MiddleSound.svg" class="MidSound flex" alt="middle sound">
+            <img src="assets/img/fullSound.svg" class="FullSound" alt="full sound">
 
           </div>
           <ul class="play-list">
