--- a/momentum/index.html
+++ b/momentum/index.html
@@ -29,7 +29,7 @@
             <img src="assets/img/NoSound.svg" class="NoSound" alt="no sound">
             <img src="assets/img/LowSound.svg" class="LowSound" alt="low sound">
             <img src="assets/img/MiddleSound.svg" class="MidSound flex" alt="middle sound">
-            <img src="assets/img/fullSound.svg" class="FullSound" alt="full sound">
+            <img src="assets/img/FullSound.svg" class="FullSound" alt="full sound">
 
           </div>
           <ul class="play-list">
